# blichat_bot

./: .gitignore  README.md  config.py  config.yaml.example  main.py  pyproject.toml
blichat_bot/: __init__.py  bili_client.py  bili_sender.py  config.py  tg_bot.py
src/: __init__.py  bilibili_listener.py  bilibili_open_listener.py  bilibili_sender.py  blivechat_open_listener.py  config.py  credential_refresher.py  message_mapper.py  telegram_bot.py
